--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^8.0.2",
     "grained": "^0.0.2",
     "overlayscrollbars-react": "^0.5.0",
+    "prettier": "^2.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "react lint",
+    "prettier": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
