--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "eslint": "^8.31.0",
     "framer-motion": "^8.0.2",
     "grained": "^0.0.2",
     "overlayscrollbars-react": "^0.5.0",
@@ -28,12 +29,6 @@
     "eject": "react-scripts eject",
     "lint": "react lint",
     "prettier": "prettier --write ."
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
