--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "framer-motion": "^8.0.2",
     "grained": "^0.0.2",
     "overlayscrollbars-react": "^0.5.0",
-    "prettier": "^2.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -58,6 +57,8 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint-plugin-storybook": "^0.6.10",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0"
